--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -8,17 +8,9 @@
 #newtab = true
 
 [[social]]
-identifier = "github"
-name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+identifier = "bilibili"
+name = "B站"
+url = "https://space.bilibili.com/110874572"
 
 [social.params]
-icon = "brand-github"
-
-[[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
-
-[social.params]
-icon = "brand-twitter"
+icon = "bilibili"
